# QmlTestApp

./: CMakeLists.txt
CMakeModules/: FindQt.cmake  Qt.cmake
Resources/: Controls.qml  MainView.qml  Settings.qml  attributes.xml  main.qml  qml.qrc
Source/: MetadataListModel.cpp  MetadataListModel.h  QtCoreHelper.cpp  QtCoreHelper.h  SortFilterProxyModel.cpp  SortFilterProxyModel.h  main.cpp
